# vstd

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  assert.h  chain.h  configure.sh  logger.h  main.cpp  thread.h  util.h  vadaptors.h  vany.h  vassert.h  vbind.h  vcache.h  vcast.h  vchain.h  vconverter.h  vdefines.h  veventloop.h  vfunctional.h  vfuture.h  vhash.h  vhex.h  vlazy.h  vlogger.h  vmeta.h  vneuro.h  vstd.h  vstring.h  vthread.h  vthreadpool.h  vtraits.h  vtuple.h  vutil.h
cmake/: vstdConfig.cmake.in
src/: adaptors.h  cast.h  hash.h  hex.h  lazy.h  threadpool.h  traits.h  vstd.h  vstring.h
tests/: vmeta_tests.cpp
vstd/: adaptors.h  assert.h  chain.h  converter.h  converter_org.h  defines.h  functional.h  future.h  hex.h  thread.h  traits.h  util.h
